# mixbench

./: README.md
gemms_cublas/: Makefile  README  mt-gemm.cpp
mixbench-cpu-gpu-contention/hip/: CMakeLists.txt  main.cpp  mix_kernels_cpu.cpp  mix_kernels_cpu.h
mixbench-cuda/: CMakeLists.txt  main-cuda.cpp  mix_kernels_cuda.cu  mix_kernels_cuda.h  run_script.sh
mixbench-hip/: main-hip.cpp  mix_kernels_hip.cpp  mix_kernels_hip.h  run_script.sh
